--- a/Day 5/task/Quizz/index.html
+++ b/Day 5/task/Quizz/index.html
@@ -9,7 +9,7 @@
 
 <body class="bg-slate-700 flex justify-center items-center min-h-screen">
 
-    <div class="bg-slate-600 w-[480px] p-6 rounded-2xl shadow-lg text-white hover:bg-black transition">
+    <div class="bg-slate-600 w-[480px] p-6 rounded-2xl shadow-lg text-white">
 
         <h2 class="text-xl font-semibold mb-2">Simple JS Quiz</h2>
         <p id="question-count" class="text-sm text-gray-300 mb-4">Question 1 of 3</p>
